# ExercisesIndustrialEngineerUniversityAntwerp

./: README.md
Assignments/: Assignments00.vhd
Basis Digitale Elektronica/: Assignments00.vhd  Assignments01.vhd  Assignments02.vhd  Assignments02.xdc  Assignments04.xdc  main.xdc
BasisDigitaleElektronica/: Assignments00.vhd  Assignments01.vhd  Assignments02.vhd  Assignments03.vhd  Assignments03.xdc  Assignments04.vhd  Assignments05.vhd  Assignments05.xdc  Assignments06.vhd  Assignments06.xdc  Assignments07.vhd  Assignments07.xdc  Assignments08.vhd  main.xdc
BasisDigitaleElektronica/Assignments00/: Assignments00.vhd
BasisDigitaleElektronica/Assignments01/: Assignments01.vhd
BasisDigitaleElektronica/Assignments02/: Assignments02.vhd  Assignments02.xdc
BasisDigitaleElektronica/Assignments03/: Assignments03.vhd
BasisDigitaleElektronica/Assignments04/: Assignments04.vhd  Assignments04.xdc
BasisDigitaleElektronica/Assignments05/: Assignments05.vhd
BasisDigitaleElektronica/Assignments06/: Assignments06.vhd
BasisDigitaleElektronica/Assignments07/: Assignments07.xdc  Component7Seg.vhd  ComponentLeds.vhd  ComponentMain.vhd
Data Structures/Assignments01/: CMakeLists.txt
Data Structures/Assignments01/include/: iterator_functions.hpp
Data Structures/Assignments01/include/01_lists_iterators/: iterator_functions.hpp  name_generation.hpp
Data Structures/Assignments01/src/01_lists_iterators/: iterator_functions.cpp  name_generation.cpp
Data Structures/Assignments01/test/: name_generation.cpp
Data Structures/Assignments02/include/: packet.hpp
Data Structures/Assignments02/src/: packet.cpp
Data Structures/Assignments02/test/: router.cpp
Data Structures/Assignments03/: CMakeLists.txt
Data Structures/Assignments03/include/: quick_sort.hpp
Data Structures/Assignments03/src/: insertion_sort.cpp  quick_sort.cpp  timer.cpp
Data Structures/Assignments03/test/: insertion_sort.cpp  quick_sort.cpp
DataStructures/Assignments01/: REPORT01.md
DataStructures/Assignments01/src/: iterator_functions.cpp  name_generation.cpp
DataStructures/Assignments01/test/: main.cpp
DataStructures/Assignments02/: CMakeLists.txt  REPORT02.md
DataStructures/Assignments02/include/: router.hpp
DataStructures/Assignments02/src/: router.cpp
DataStructures/Assignments02/test/: main.cpp  packet.cpp
DataStructures/Assignments03/: CMakeLists.txt  REPORT03.md
DataStructures/Assignments03/include/: insertion_sort.hpp
DataStructures/Assignments03/src/: quick_sort.cpp
DataStructures/Assignments03/test/: quick_sort.cpp
DataStructures/Assignments04/: CMakeLists.txt  REPORT04.md
DataStructures/Assignments04/include/: my_string1.hpp  my_string2.hpp
DataStructures/Assignments04/include/catch2/: catch.hpp
DataStructures/Assignments04/python/: GeneratePlots.py  measurements.csv
DataStructures/Assignments04/src/: measure.cpp  my_string1.cpp  my_string2.cpp
DataStructures/Assignments04/test/: main.cpp  my_string1.cpp  my_string2.cpp
DataStructures/Assignments05/: CMakeLists.txt  REPORT05.md
DataStructures/Assignments05/include/: binary_tree.hpp  breadth_first.hpp  in_order.hpp  post_order.hpp  pre_order.hpp
DataStructures/Assignments05/include/05_binary_trees/: binary_tree.hpp  breadth_first.hpp  in_order.hpp  post_order.hpp  pre_order.hpp
DataStructures/Assignments05/include/catch2/: catch.hpp
DataStructures/Assignments05/src/: binary_tree.cpp  breadth_first.cpp  in_order.cpp  post_order.cpp  pre_order.cpp
DataStructures/Assignments05/src/05_binary_trees/: binary_tree.cpp  breadth_first.cpp
DataStructures/Assignments05/test/: breadth_first.cpp  in_order.cpp  main.cpp  post_order.cpp  pre_order.cpp
DataStructures/Assignments06/: CMakeLists.txt  REPORT06.md
DataStructures/Assignments06/include/: astar.hpp  bfs.hpp  dfs.hpp  dijkstra.hpp  graph.hpp
DataStructures/Assignments06/src/: graphlib.cpp
DataStructures/Assignments06/test/: dijkstra_astar.cpp  graph_basic.cpp  main.cpp
DataStructures/Project/: CMakeLists.txt  Presentation.pptx  REPORT.md  demo.cpp
DataStructures/Project/lib/: CMakeLists.txt  SparseMatrix.h
DataStructures/Project/test/: CMakeLists.txt  SparseMatrixTests.cpp
DigitalImageProcessing/Session1/: Example1.m  Example2.m  Example3.m  Example4.m  Example5.m  Example6.m
DigitalImageProcessing/Session2/: Example1.m  Example2.m  Example3.m  Example4.m
DigitalImageProcessing/Session3/: Example1.m  Example2.m  Example3.m
Netwerkarchitectuur/: PhysicalNetworkLab0.md  PhysicalNetworkLab1.md  PhysicalNetworkLab2.md  PhysicalNetworkLab3.md  PhysicalNetworkLab4.md  PhysicalNetworkLab5.md  router.conf
Software Design/: AI.md
SoftwareDesign/: SampleExamQuestion.plantuml
SoftwareDesign/Portfolio/: AI.md
SoftwareDesign/Portfolio/Lab01/: project.xml
SoftwareDesign/Portfolio/Lab01/Code/: Booking.java  Hotel.java  Main.java  Room.java
SoftwareDesign/Portfolio/Lab01/Plantuml/: SequenceDiagram.plantuml  UseCaseDiagram.plantuml
SoftwareDesign/Portfolio/Lab02/Code/Abstractions/: Circle.java  EquilateralTriangle.java  Main.java  Shape.java  Square.java
SoftwareDesign/Portfolio/Lab02/Code/Inheritance/: CustomerService.java  DepartmentOfficer.java  Employee.java  Main.java  Programmer.java
SoftwareDesign/Portfolio/Lab02/Code/Interfaces/: CDPlayer.java  Main.java  Radio.java  TV.java  UniversalRemote.java  VolumeDevice.java
SoftwareDesign/Portfolio/Lab02/Code/Relations/: Attendee.java  Booking.java  FeatureFilm.java  Festival.java  Main.java  Person.java  Program.java  Screening.java  Staff.java  (+3 more)
SoftwareDesign/Portfolio/Lab02/Plantuml/: ClassDiagram-Interfaces.plantuml  ClassDiagram-Relations.plantuml
SoftwareDesign/Portfolio/Lab03/Plantuml/: ClassDiagram-Inventory.plantuml  ClassDiagram-Observer.plantuml  ClassDiagram-Singleton.plantuml
SoftwareDesign/Portfolio/Lab04/Code/: Main.java  Plant.java  PlantingPlan.java  ReforestationPlanner.java
SoftwareDesign/Portfolio/Lab04/Plantuml/: ClassDiagram.plantuml
SoftwareDesign/Portfolio/Lab05/Code/: ViewApp.java
Statistiek/: Hst8_MLopdrachten.m  TGBVolley.mat  TeamGB.mat  Theorie05.m
(+103 files in other folders)
